--- a/index.html
+++ b/index.html
@@ -301,6 +301,8 @@
 
     </script>
 
+  <footer style="text-align: center; margin-top: 2em; font-size: .9em;">&copy; 2023 - 2025 Anna Natalie Chlopecki</footer>
+
   </body>
 
 </html>
