Edit CV and teaching.

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             Address: Mathematical Sciences Building, 150 N. University Street, Office 1047, West Lafayette, IN
           </p>
           <h3>
-            <a href="https://drive.google.com/file/d/1JqWuHe5faZ_18R7758oi9vPIF_CWp9J4/view?usp=sharing">
+            <a href="https://drive.google.com/file/d/1SH0VyUp_zw5OKjG9Fz54Kgf3f3PSNTW-/view?usp=sharing">
               Curriculum Vitae
             </a>
           </h3>
@@ -222,7 +222,7 @@
           </p> -->
           <h3>Instructor of Record</h3>
           <p>
-            Applied Calculus I (MA 16010), Fall 2024  
+            Applied Calculus I (MA 16010), Fall 2024 and Spring 2026
           </p>
           <h3>Recitation Instructor</h3>
           <p>
@@ -231,7 +231,7 @@
           </p>
           <h3>Grader</h3>
           <p>
-            Elements of Algebra I (MA 45300), Spring 2023, 2024, 2025 <br>
+            Elements of Algebra I (MA 45300), Spring 2023, 2024, and 2025 <br>
             Linear Algebra II (MA 35301), Fall 2023 <br>
             An Intro to Proof through Real Analysis (MA 30100), Fall 2023 <br>
             Diff. Eq. and Partial Diff. Eq. for Engineering and the Sciences (MA 30300), Summer 2022
