Added paper 3 and modified CV.

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             Address: Mathematical Sciences Building, 150 N. University Street, Office 1047, West Lafayette, IN
           </p>
           <h3>
-            <a href="https://drive.google.com/file/d/1SH0VyUp_zw5OKjG9Fz54Kgf3f3PSNTW-/view?usp=sharing">
+            <a href="https://drive.google.com/file/d/1xQ-i62VjWLMQSWj4eUkLSGKJTmqMnow_/view?usp=sharing">
               Curriculum Vitae
             </a>
           </h3>
@@ -202,6 +202,9 @@
           </p>
           <h3>Preprints</h3>
           <p>
+            (3) <a href="https://arxiv.org/abs/2601.02612">Antidiagonal Initial Complexes of Infinite Matrix Schubert Varieties are Cohen-Macaulay</a>.
+            With Nathaniel Gallup and Jason Meintjes.
+            2026. <br>
             (2) <a href="https://arxiv.org/abs/2509.13120">An elementary proof that linking problems are hard</a>. 
             With Shannon Cheng, Saarah Nazar, and Eric Samperton.
             Submitted 2025. <br>
@@ -220,6 +223,7 @@
           <!-- <p style="text-align: center;">
             In progress.
           </p> -->
+          <!-- Current students can find course information and notes on Brightspace. -->
           <h3>Instructor of Record</h3>
           <p>
             Applied Calculus I (MA 16010), Fall 2024 and Spring 2026
