Research section edit.

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           <p>
             (3) <a href="https://arxiv.org/abs/2601.02612">Antidiagonal Initial Complexes of Infinite Matrix Schubert Varieties are Cohen-Macaulay</a>.
             With <a href="https://sites.google.com/view/nathanielgallup/home">Nathaniel Gallup</a> and Jason Meintjes.
-            2026. <br>
+            Submitted 2026. <br>
             (2) <a href="https://arxiv.org/abs/2509.13120">An elementary proof that linking problems are hard</a>. 
             With Shannon Cheng, Saarah Nazar, and Eric Samperton.
             Submitted 2025. <br>
