Created section for MA 16010 Spring 2026.

--- a/index.html
+++ b/index.html
@@ -224,9 +224,10 @@
             In progress.
           </p> -->
           <!-- Current students can find course information and notes on Brightspace. -->
+          Current students can find course information and notes using the links below.
           <h3>Instructor of Record</h3>
           <p>
-            Applied Calculus I (MA 16010), Fall 2024 and Spring 2026
+            Applied Calculus I (MA 16010), Fall 2024 and <a href="MA%2016010%20Spring%202026/spring2026.html">Spring 2026</a>
           </p>
           <h3>Recitation Instructor</h3>
           <p>
