--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             In progress.
           </p> -->
           <!-- Current students can find course information and notes on Brightspace. -->
-          Current students can find course information and notes using the links below.
+          Current students can find course notes using the links below.
           <h3>Instructor of Record</h3>
           <p>
             Applied Calculus I (MA 16010), Fall 2024 and <a href="MA%2016010%20Spring%202026/MA16010spring2026.html">Spring 2026</a>
