--- a/MA 16010 Spring 2026/MA16010spring2026.html
+++ b/MA 16010 Spring 2026/MA16010spring2026.html
@@ -102,7 +102,8 @@
         <h3>Accessible Notes</h3>
         <p>
         <i>Remark: Notes were created with the help of resources provided by the <a href="https://www.math.purdue.edu/~yipn/TPC/">Teaching Pit Crew</a>.</i> <br>
-        <a href="MA%2016010%20Accessible%20Notes/calc1_lesson1_review.html">Lesson 1</a>
+        <a href="MA%2016010%20Accessible%20Notes/calc1_lesson1_review.html">Lesson 1</a> <br>
+        <a href="MA%2016010%20Accessible%20Notes/calc1_lesson2_limits.html">Lesson 2</a>
         </p>
     </div>
 
