--- a/MA 16010 Spring 2026/MA 16010 Accessible Notes/calc1_lesson2_limits.html
+++ b/MA 16010 Spring 2026/MA 16010 Accessible Notes/calc1_lesson2_limits.html
@@ -463,7 +463,7 @@
 </div>
 
 <div class="example">
-    <h5>Example 6: Unbounded Limits</h5>
+    <h5>Example 6: Infinite Limits</h5>
     
     <div class="visual-desc">
         <p><strong>Graph Description:</strong> As \(x\) approaches 0 from the left, the function decreases without bound. 
