Modify table alignment.

--- a/MA 16010 Spring 2026/MA 16010 Accessible Notes/calc1_lesson2_limits.html
+++ b/MA 16010 Spring 2026/MA 16010 Accessible Notes/calc1_lesson2_limits.html
@@ -133,7 +133,7 @@
         th, td {
             border: 1px solid rgb(143, 143, 143);
             padding: 12px;
-            text-align: left;
+            text-align: center;
         }
         th {
             background-color: rgb(214, 214, 214);
@@ -418,9 +418,9 @@
         <thead>
             <tr>
                 <th>Limit Expression</th>
-                <th>At \(x = -4\)</th>
-                <th>At \(x = -1\)</th>
-                <th>At \(x = 3\)</th>
+                <th>\(c = -4\)</th>
+                <th>\(c = -1\)</th>
+                <th>\(c = 3\)</th>
             </tr>
         </thead>
         <tbody>
@@ -453,9 +453,9 @@
     
     <div class="solution">
         <p><strong>Solution:</strong></p>
-        <p>For \(x = -4\): The left-sided limit is 3, but the right-sided limit is 4. Therefore, the two-sided limit does not exist. Note that \(f(-4)=3\).</p>
-        <p>For \(x = -1\): Both one-sided limits equal 2, implying that the two-sided limit is 2. Note that \(f(-1)=-1\).</p>
-        <p>For \(x = 3\): The left-sided limit is -3, but the right-sided limit is -2. Therefore, the two-sided limit does not exist. Note that \(f(3)=-2\).</p>
+        <p>For \(c = -4\): The left-sided limit is 3, but the right-sided limit is 4. Therefore, the two-sided limit does not exist. Note that \(f(-4)=3\).</p>
+        <p>For \(c = -1\): Both one-sided limits equal 2, implying that the two-sided limit is 2. Note that \(f(-1)=-1\).</p>
+        <p>For \(c = 3\): The left-sided limit is -3, but the right-sided limit is -2. Therefore, the two-sided limit does not exist. Note that \(f(3)=-2\).</p>
     </div>
 </div>
 
@@ -469,9 +469,9 @@
     </div>
     
     <p>Find the following using the graph of \(f(x)\):</p>
-    \[\lim_{x \to 0^-} f(x) = ? \qquad
-    \lim_{x \to 0^+} f(x) = ? \qquad
-    \lim_{x \to 0} f(x) = ? \qquad
+    \[\lim_{x \to 0^-} f(x) = ? \qquad\qquad
+    \lim_{x \to 0^+} f(x) = ? \qquad\qquad
+    \lim_{x \to 0} f(x) = ? \qquad\qquad
     f(0) = ?\]
     <div class="solution">
         <p><strong>Solution:</strong></p>
