--- a/MA 16010 Spring 2026/MA 16010 Accessible Notes/calc1_lesson1_review.html
+++ b/MA 16010 Spring 2026/MA 16010 Accessible Notes/calc1_lesson1_review.html
@@ -134,7 +134,7 @@
         th, td {
             border: 1px solid rgb(143, 143, 143);
             padding: 12px;
-            text-align: left;
+            text-align: center;
         }
         th {
             background-color: rgb(214, 214, 214);
