Modify lessons to meet requirements.

--- a/MA 16010 Spring 2026/MA 16010 Accessible Notes/calc1_lesson1_review.html
+++ b/MA 16010 Spring 2026/MA 16010 Accessible Notes/calc1_lesson1_review.html
@@ -28,14 +28,14 @@
         /* Header Styles */
         h3 { 
             color: rgb(60, 60, 60); 
-            border-bottom: 3px solid rgb(109, 118, 139); 
+            border-bottom: 3px solid rgb(60, 60, 60); 
             padding-bottom: 8px;
             margin-top: 30px;
             font-size: 1.5em;
         }
         h4 { 
             color: rgb(60, 60, 60); 
-            border-left: 4px solid rgb(109, 118, 139); 
+            border-left: 4px solid rgb(60, 60, 60); 
             padding-left: 15px;
             margin-top: 25px;
             font-size: 1.3em;
@@ -232,6 +232,10 @@
 
 <h4>Useful Trigonometric Function Values</h4>
 
+<div class="visual-desc">
+    <p><strong>Visual Description:</strong> Imagine the unit circle centered at the origin with radius 1. Starting from the positive x-axis (angle 0), we move counterclockwise. At θ = 0, we're at point (1, 0). At π/6 (30°), we're at (√3/2, 1/2). At π/4 (45°), we're at (√2/2, √2/2). At π/3 (60°), we're at (1/2, √3/2). At π/2 (90°), we're at the top of the circle at (0, 1). Continuing around: at π (180°), we're at (-1, 0); at 3π/2 (270°), we're at (0, -1); and at 2π (360°), we complete the circle back at (1, 0). For any angle θ, the x-coordinate gives cos(θ) and the y-coordinate gives sin(θ).</p>
+</div>
+
 <p>The following table presents key values of the sine and cosine functions at commonly used angles.</p>
 
 <table>
@@ -292,6 +296,7 @@
 
 <div class="theorem">
     <p><strong>Trigonometric Identities:</strong></p>
+    
     <ul>
         <li>\(\tan(x) = \frac{\sin(x)}{\cos(x)}\)</li>
         <li>\(\cot(x) = \frac{\cos(x)}{\sin(x)}\)</li>
