--- a/MA 16010 Spring 2026/MA16010spring2026.html
+++ b/MA 16010 Spring 2026/MA16010spring2026.html
@@ -109,7 +109,7 @@
 
     <script>
 
-      document.title = "MA 16010 | Applied Calculus I | Spring 2026";
+      document.title = "Applied Calculus I | Spring 2026";
 
     </script>
 
