Added accessible notes for lesson 1.

--- a/MA_16010_Spring_2026/MA16010spring2026.html
+++ b/MA_16010_Spring_2026/MA16010spring2026.html
@@ -92,18 +92,17 @@
         MRR Hours: Tuesdays at 12:30-1:30pm in LILY 1-407
         </p>
         <!-- <h3><a href="">Syllabus</a></h3> -->
-        <h3><a href="MA%2016010%20Spring%202026%20Extra%20Credit.pdf">Extra Credit</a></h3>
+        <h3><a href="extra_credit.pdf">Extra Credit</a></h3>
         <h3>Class Notes</h3>
         <p>
-        <a href="MA%2016010%20Class%20Notes/Lesson%201%20Chlopecki%20Class%20Notes.pdf">Lesson 1</a> <br>
-        <a href="MA%2016010%20Class%20Notes/Lesson%202%20Chlopecki%20Class%20Notes.pdf">Lesson 2</a> <br>
-        <a href="MA%2016010%20Class%20Notes/Lesson%203%20Chlopecki%20Class%20Notes.pdf">Lesson 3</a>
+        <a href="Handwritten_Notes/lesson1_handwritten_notes.pdf">Lesson 1</a> <br>
+        <a href="Handwritten_Notes/lesson2_handwritten_notes.pdf">Lesson 2</a> <br>
+        <a href="Handwritten_Notes/lesson3_handwritten_notes.pdf">Lesson 3</a>
         </p>
         <h3>Accessible Notes</h3>
         <p>
         <i>Remark: Notes were created with the help of resources provided by the <a href="https://www.math.purdue.edu/~yipn/TPC/">Teaching Pit Crew</a>.</i> <br>
-        <a href="MA%2016010%20Accessible%20Notes/calc1_lesson1_review.html">Lesson 1</a> <br>
-        <a href="MA%2016010%20Accessible%20Notes/calc1_lesson2_limits.html">Lesson 2</a>
+        <a href="Accessible_Notes/lesson1_accessible_notes.html">Lesson 1</a>
         </p>
     </div>
 
