--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           Current students can find course notes using the links below.
           <h3>Instructor of Record</h3>
           <p>
-            Applied Calculus I (MA 16010), Fall 2024 and <a href="MA%2016010%20Spring%202026/MA16010spring2026.html">Spring 2026</a>
+            Applied Calculus I (MA 16010), Fall 2024 and <a href="MA_16010_Spring_2026/MA16010spring2026.html">Spring 2026</a>
           </p>
           <h3>Recitation Instructor</h3>
           <p>
