Add accessible notes for lesson 2.

--- a/MA_16010_Spring_2026/MA16010spring2026.html
+++ b/MA_16010_Spring_2026/MA16010spring2026.html
@@ -102,7 +102,8 @@
         <h3>Accessible Notes</h3>
         <p>
         <i>Remark: Notes were created with the help of resources provided by the <a href="https://www.math.purdue.edu/~yipn/TPC/">Teaching Pit Crew</a>.</i> <br>
-        <a href="Accessible_Notes/lesson1_accessible_notes.html">Lesson 1</a>
+        <a href="Accessible_Notes/lesson1_accessible_notes.html">Lesson 1</a> <br>
+        <a href="Accessible_Notes/lesson2_accessible_notes.html">Lesson 2</a>
         </p>
     </div>
 
