Modify MA 16010 page to be simpler.

--- a/MA_16010_Spring_2026/MA16010spring2026.html
+++ b/MA_16010_Spring_2026/MA16010spring2026.html
@@ -84,16 +84,17 @@
             <a style="margin-right: 3.75em;" href="">Calendar</a>
             <a href="">Extra Credit</a>
         </h3> -->
-        <h3>Instructor Information</h3>
+        <!-- <h3>Instructor Information</h3>
         <p>
-        <a href="https://anchlopecki.github.io">Anna Natalie Chlopecki</a> <br>
+        Anna Natalie Chlopecki <br>
         Email: achlopec@purdue.edu <br>
         Office: MATH 1047 <br>
-        MRR Hours: Tuesdays at 12:30-1:30pm in LILY 1-407
-        </p>
+        Office Hours: Tuesdays at 12:30-1:30pm in LILY 1-407 or by appointment
+        </p> -->
         <!-- <h3><a href="">Syllabus</a></h3> -->
-        <h3><a href="extra_credit.pdf">Extra Credit</a></h3>
-        <h3>Class Notes</h3>
+        <!-- <h3>Course Information</h3> -->
+        <!-- <h3><a href="extra_credit.pdf">Extra Credit</a></h3> -->
+        <h3>Handwritten Notes</h3>
         <p>
         <a href="Handwritten_Notes/lesson1_handwritten_notes.pdf">Lesson 1</a> <br>
         <a href="Handwritten_Notes/lesson2_handwritten_notes.pdf">Lesson 2</a> <br>
@@ -113,7 +114,7 @@
 
     </script>
 
-    <footer style="text-align: center; margin-top: 4em; font-size: .9em;">&copy; 2023 - 2025 Anna Natalie Chlopecki</footer>
+    <footer style="text-align: center; margin-top: 4em; font-size: .9em;">&copy; 2023 - 2026 Anna Natalie Chlopecki</footer>
 
   </body>
 
