Add lesson 4 notes.

--- a/MA_16010_Spring_2026/Accessible_Notes/lesson2_accessible_notes.html
+++ b/MA_16010_Spring_2026/Accessible_Notes/lesson2_accessible_notes.html
@@ -457,10 +457,15 @@
     <h5>Example 5: Multiple Limits from a Single Graph</h5>
     
     <div class="visual-desc">
-        <p><strong>Graph Description:</strong> The graph shows a piecewise continuous function with several notable features. 
-            At \(x = -4\), there is an open circle at \(y=4\) and a solid dot at \(y = 3\). 
+        <p><strong>Graph Description:</strong> The graph of \(f(x)\) shows a piecewise continuous function with several notable features. 
+            At \(x = -4\), there is an open circle at \(y=4\) and a solid dot at \(y = 3\).
+            As \(x\) approaches \(-4\) from the left, \(f(x)\) approaches \(3\).
+            As \(x\) approaches \(-4\) from the right, \(f(x)\) approaches \(4\).
             At \(x = -1\), there is an open circle at \(y = 2\) and a solid dot at \(y = -1\), with the curve approaching \(y = 2\) from both sides. 
-            At \(x = 3\), there is an open circle at \(y=-3\) and a solid dot at \(y=-2\).</p>
+            At \(x = 3\), there is an open circle at \(y=-3\) and a solid dot at \(y=-2\).
+            As \(x\) approaches \(3\) from the left, \(f(x)\) approaches \(-3\).
+            As \(x\) approaches \(3\) from the right, \(f(x)\) approaches \(-2\).
+        </p>
     </div>
     
     <p>Compute the following using the graph of \(f(x)\) described above:</p>
