--- a/MA_16010_Spring_2026/MA16010spring2026.html
+++ b/MA_16010_Spring_2026/MA16010spring2026.html
@@ -98,14 +98,16 @@
         <p>
         <a href="Handwritten_Notes/lesson1_handwritten_notes.pdf">Lesson 1</a> <br>
         <a href="Handwritten_Notes/lesson2_handwritten_notes.pdf">Lesson 2</a> <br>
-        <a href="Handwritten_Notes/lesson3_handwritten_notes.pdf">Lesson 3</a>
+        <a href="Handwritten_Notes/lesson3_handwritten_notes.pdf">Lesson 3</a> <br>
+        <a href="Handwritten_Notes/lesson4_handwritten_notes.pdf">Lesson 4</a>
         </p>
         <h3>Accessible Notes</h3>
         <p>
         <i>Remark: Notes were created with the help of resources provided by the <a href="https://www.math.purdue.edu/~yipn/TPC/">Teaching Pit Crew</a>.</i> <br>
         <a href="Accessible_Notes/lesson1_accessible_notes.html">Lesson 1</a> <br>
         <a href="Accessible_Notes/lesson2_accessible_notes.html">Lesson 2</a> <br>
-        <a href="Accessible_Notes/lesson3_accessible_notes.html">Lesson 3</a>
+        <a href="Accessible_Notes/lesson3_accessible_notes.html">Lesson 3</a> <br>
+        <a href="Accessible_Notes/lesson4_accessible_notes.html">Lesson 4</a>
         </p>
     </div>
 
