--- a/MA_16010_Spring_2026/Accessible_Notes/lesson1_accessible_notes.html
+++ b/MA_16010_Spring_2026/Accessible_Notes/lesson1_accessible_notes.html
@@ -21,6 +21,7 @@
             margin: 0 auto;
             padding: 20px;
             background-color: rgb(248, 246, 250);
+            /* background-color: rgb(235, 233, 237); */
             color: rgb(60, 60, 60);
         }
         
@@ -185,11 +186,13 @@
         @media print {
             body {
                 background-color: rgb(248, 246, 250);
+                /* background-color: rgb(235, 233, 237); */
                 color: rgb(60, 60, 60);
             }
             .definition, .theorem, .example, .important, .warning {
                 border: 1px solid rgb(60, 60, 60);
                 background-color: rgb(248, 246, 250);
+                /* background-color: rgb(235, 233, 237); */
             }
         }
     </style>
