--- a/MA_16010_Spring_2026/Accessible_Notes/lesson2_accessible_notes.html
+++ b/MA_16010_Spring_2026/Accessible_Notes/lesson2_accessible_notes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Applied Calculus I - Lesson 2</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.2/es5/tex-mml-chtml.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.2/es5/tex-mml-chtml.min.js"></script>
     <script>
         MathJax = {
             tex: {
@@ -12,7 +12,16 @@
                 displayMath: [['\\[', '\\]']]
             }
         };
+    </script> -->
+    <script>
+    window.MathJax = {
+        tex: {
+            inlineMath: [['\\(', '\\)']],
+            displayMath: [['\\[', '\\]']]
+        }
+    };
     </script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <style>
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -484,22 +493,22 @@
     </div>
     
     <p>Compute the following using the graph of \(f(x)\) described above:</p>
-    \[\lim_{x \to -4^-} f(x) \qquad\qquad\qquad
-    \lim_{x \to -1^-} f(x) \qquad\qquad\qquad
-    \lim_{x \to 3^-} f(x)
-    \]
-    \[\lim_{x \to -4^+} f(x) \qquad\qquad\qquad
-    \lim_{x \to -1^+} f(x) \qquad\qquad\qquad
-    \lim_{x \to 3^+} f(x)
-    \]
-    \[\lim_{x \to -4} f(x) \qquad\qquad\qquad
-    \lim_{x \to -1} f(x) \qquad\qquad\qquad
-    \lim_{x \to 3} f(x)
-    \]
-    \[f(-4) \qquad\qquad\qquad\qquad
-    f(-1) \qquad\qquad\qquad\qquad
-    f(3)
-    \]
+    \[\begin{align}&\lim_{x \to -4^-} f(x) \qquad\qquad\qquad
+    &\lim_{x \to -1^-} f(x) \qquad\qquad\qquad
+    &\lim_{x \to 3^-} f(x)
+    \\
+    &\lim_{x \to -4^+} f(x) \qquad\qquad\qquad
+    &\lim_{x \to -1^+} f(x) \qquad\qquad\qquad
+    &\lim_{x \to 3^+} f(x)
+    \\
+    &\lim_{x \to -4} f(x) \qquad\qquad\qquad
+    &\lim_{x \to -1} f(x) \qquad\qquad\qquad
+    &\lim_{x \to 3} f(x)
+    \\
+    &f(-4) \qquad\qquad\qquad\qquad
+    &f(-1) \qquad\qquad\qquad\qquad
+    &f(3)
+    \end{align}\]
     
     <div class="solution">
         <p><strong>Solution:</strong></p>
