--- a/MA_16010_Spring_2026/MA16010spring2026.html
+++ b/MA_16010_Spring_2026/MA16010spring2026.html
@@ -110,7 +110,8 @@
         <a href="Accessible_Notes/lesson2_accessible_notes.html">Lesson 2</a> <br>
         <a href="Accessible_Notes/lesson3_accessible_notes.html">Lesson 3</a> <br>
         <a href="Accessible_Notes/lesson4_accessible_notes.html">Lesson 4</a> <br>
-        <a href="Accessible_Notes/lesson5_accessible_notes.html">Lesson 5</a>
+        <a href="Accessible_Notes/lesson5_accessible_notes.html">Lesson 5</a> <br>
+        <a href="Accessible_Notes/lesson6_accessible_notes.html">Lesson 6</a>
         </p>
     </div>
 
