Add lesson 7 notes.

--- a/MA_16010_Spring_2026/MA16010spring2026.html
+++ b/MA_16010_Spring_2026/MA16010spring2026.html
@@ -101,7 +101,8 @@
         <a href="Handwritten_Notes/lesson3_handwritten_notes.pdf">Lesson 3</a> <br>
         <a href="Handwritten_Notes/lesson4_handwritten_notes.pdf">Lesson 4</a> <br>
         <a href="Handwritten_Notes/lesson5_handwritten_notes.pdf">Lesson 5</a> <br>
-        <a href="Handwritten_Notes/lesson6_handwritten_notes.pdf">Lesson 6</a>
+        <a href="Handwritten_Notes/lesson6_handwritten_notes.pdf">Lesson 6</a> <br>
+        <a href="Handwritten_Notes/lesson7_handwritten_notes.pdf">Lesson 7</a>
         </p>
         <h3>Accessible Notes</h3>
         <p>
