--- a/MA_16010_Spring_2026/MA16010spring2026.html
+++ b/MA_16010_Spring_2026/MA16010spring2026.html
@@ -114,7 +114,8 @@
         <a href="Accessible_Notes/lesson4_accessible_notes.html">Lesson 4</a> <br>
         <a href="Accessible_Notes/lesson5_accessible_notes.html">Lesson 5</a> <br>
         <a href="Accessible_Notes/lesson6_accessible_notes.html">Lesson 6</a> <br>
-        <a href="Accessible_Notes/lesson7_accessible_notes.html">Lesson 7</a>
+        <a href="Accessible_Notes/lesson7_accessible_notes.html">Lesson 7</a> <br>
+        <a href="Accessible_Notes/lesson8_accessible_notes.html">Lesson 8</a>
         </p>
     </div>
 
