--- a/MA_16010_Spring_2026/MA16010spring2026.html
+++ b/MA_16010_Spring_2026/MA16010spring2026.html
@@ -107,7 +107,7 @@
         </p>
         <h3>Accessible Notes</h3>
         <p>
-        <i>Remark: Notes were created with the help of resources provided by the <a href="https://www.math.purdue.edu/~yipn/TPC/">Teaching Pit Crew</a>.</i> <br>
+        <!-- <i>Remark: Notes were created with the help of resources provided by the <a href="https://www.math.purdue.edu/~yipn/TPC/">Teaching Pit Crew</a>.</i> <br> -->
         <a href="Accessible_Notes/lesson1_accessible_notes.html">Lesson 1</a> <br>
         <a href="Accessible_Notes/lesson2_accessible_notes.html">Lesson 2</a> <br>
         <a href="Accessible_Notes/lesson3_accessible_notes.html">Lesson 3</a> <br>
@@ -116,6 +116,7 @@
         <a href="Accessible_Notes/lesson6_accessible_notes.html">Lesson 6</a> <br>
         <a href="Accessible_Notes/lesson7_accessible_notes.html">Lesson 7</a> <br>
         <a href="Accessible_Notes/lesson8_accessible_notes.html">Lesson 8</a>
+        <br> <br> <i>Remark: Accessible notes were created with the help of resources provided by the <a href="https://www.math.purdue.edu/~yipn/TPC/">Teaching Pit Crew</a>.</i>
         </p>
     </div>
 
