Fix photo percentage.

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       }
 
       .home_image {
-        width: 20%; /* changed from 30% */
+        width: 30%;
         /* padding-left: 5%;
         float: left;
         text-align: right; */
