--- a/MA_16010_Spring_2026/MA16010spring2026.html
+++ b/MA_16010_Spring_2026/MA16010spring2026.html
@@ -104,7 +104,8 @@
         <a href="Handwritten_Notes/lesson6_handwritten_notes.pdf">Lesson 6</a> <br>
         <a href="Handwritten_Notes/lesson7_handwritten_notes.pdf">Lesson 7</a> <br>
         <a href="Handwritten_Notes/lesson8_handwritten_notes.pdf">Lesson 8</a> <br>
-        <a href="Handwritten_Notes/lesson9_handwritten_notes.pdf">Lesson 9</a>
+        <a href="Handwritten_Notes/lesson9_handwritten_notes.pdf">Lesson 9</a> <br>
+        <a href="Handwritten_Notes/lesson10_handwritten_notes.pdf">Lesson 10</a>
         </p>
         <h3>Accessible Notes</h3>
         <p>
