Added lesson 10 accesible notes.

--- a/MA_16010_Spring_2026/MA16010spring2026.html
+++ b/MA_16010_Spring_2026/MA16010spring2026.html
@@ -118,7 +118,8 @@
         <a href="Accessible_Notes/lesson6_accessible_notes.html">Lesson 6</a> <br>
         <a href="Accessible_Notes/lesson7_accessible_notes.html">Lesson 7</a> <br>
         <a href="Accessible_Notes/lesson8_accessible_notes.html">Lesson 8</a> <br>
-        <a href="Accessible_Notes/lesson9_accessible_notes.html">Lesson 9</a>
+        <a href="Accessible_Notes/lesson9_accessible_notes.html">Lesson 9</a> <br>
+        <a href="Accessible_Notes/lesson10_accessible_notes.html">Lesson 10</a>
         <br> <br> <i>Remark: Accessible notes were created with the help of resources provided by the <a href="https://www.math.purdue.edu/~yipn/TPC/">Teaching Pit Crew</a>.</i>
         </p>
     </div>
