--- a/MA_16010_Spring_2026/Accessible_Notes/lesson10_accessible_notes.html
+++ b/MA_16010_Spring_2026/Accessible_Notes/lesson10_accessible_notes.html
@@ -205,7 +205,7 @@
 <h3>Lesson 10: The Chain Rule</h3>
 
 <!-- Section 1: Warm-up Problems -->
-<h3>10.1 Warm-up Problems</h3>
+<h3>Warm-up Problems</h3>
 
 <p>For each function \(y\), find functions \(f(x)\) and \(g(x)\) such that \(y = f(g(x))\).</p>
 
@@ -232,7 +232,7 @@
 </div>
 
 <!-- Section 2: The Chain Rule -->
-<h3>10.2 The Chain Rule</h3>
+<h3>The Chain Rule</h3>
 
 <div class="theorem">
     <p><strong>The Chain Rule:</strong> Suppose \(y = f(g(x))\). Then,</p>
