--- a/MA_16010_Spring_2026/Accessible_Notes/lesson6_accessible_notes.html
+++ b/MA_16010_Spring_2026/Accessible_Notes/lesson6_accessible_notes.html
@@ -214,7 +214,7 @@
 <h3>Lesson 6: Basic Rules of Differentiation; Derivatives of Sine and Cosine; Natural Exponential Function</h3>
 
 <!-- Section 1: Basic Rules of Differentiation -->
-<h3>6.1 Basic Rules of Differentiation</h3>
+<h3>Basic Rules of Differentiation</h3>
 
 <div class="theorem">
     <p><strong>Constant Rule:</strong> For any constant \(c\),</p>
@@ -245,6 +245,8 @@
 <div class="important">
     <p><strong>Important:</strong> Recall that \(x^{-n} = \frac{1}{x^n}\) and \(x^{n/m} = \sqrt[m]{x^n}\).</p>
 </div>
+
+<h3>Examples</h3>
 
 <div class="example">
     <h5>Example 1: Finding Derivatives Using Basic Rules</h5>
@@ -300,7 +302,7 @@
 </div>
 
 <!-- Section 2: Sine and Cosine -->
-<h3>6.2 Derivatives of Sine and Cosine</h3>
+<h3>Derivatives of Sine and Cosine</h3>
 
 <div class="theorem">
     <p><strong>Derivatives of Trigonometric Functions:</strong> We note that</p>
@@ -346,7 +348,7 @@
 </div>
 
 <!-- Section 3: Exponential Function -->
-<h3>6.3 Derivative of the Natural Exponential Function</h3>
+<h3>Derivative of the Natural Exponential Function</h3>
 
 <div class="theorem">
     <p><strong>Derivative of the Exponential Function:</strong> We note that</p>
@@ -365,7 +367,7 @@
 </div>
 
 <!-- Section 4: Practice Problems -->
-<h3>6.4 Practice Problems</h3>
+<h3>Practice Problems</h3>
 
 <div class="example">
     <h5>Practice Problem 1</h5>
