--- a/MA_16010_Spring_2026/Accessible_Notes/lesson7_accessible_notes.html
+++ b/MA_16010_Spring_2026/Accessible_Notes/lesson7_accessible_notes.html
@@ -205,7 +205,7 @@
 <h3>Lesson 7: Instantaneous Rates of Change</h3>
 
 <!-- Section 1: Instantaneous Rates of Change -->
-<h3>7.1 Instantaneous Rates of Change</h3>
+<h3>Instantaneous Rates of Change</h3>
 
 <div class="visual-desc">
     <p><strong>Graph Description:</strong> A coordinate plane showing a curved function \(f(x)\) that increases from left to right with decreasing steepness. Two points are marked on the curve: \((x, f(x))\) at the lower left and \((x+h, f(x+h))\) at the upper right. A secant line connects these two points, showing the average rate of change over the interval from \(x\) to \(x+h\). The graph illustrates the geometric interpretation of the average rate of change formula.</p>
@@ -248,7 +248,7 @@
 </div>
 
 <!-- Section 2: Velocity -->
-<h3>7.2 Velocity</h3>
+<h3>Velocity</h3>
 
 <div class="definition">
     <p><strong>Definition:</strong> The <strong>velocity</strong> is the rate of change of the position.</p>
@@ -281,7 +281,7 @@
 </div>
 
 <!-- Section 3: Practice Problems -->
-<h3>7.3 Practice Problems</h3>
+<h3>Practice Problems</h3>
 
 <div class="example">
     <h5>Practice Problem 1: Rock Thrown on Mars</h5>
