--- a/MA_16010_Spring_2026/Accessible_Notes/lesson8_accessible_notes.html
+++ b/MA_16010_Spring_2026/Accessible_Notes/lesson8_accessible_notes.html
@@ -205,7 +205,7 @@
 <h3>Lesson 8: The Product Rule</h3>
 
 <!-- Section 1: The Product Rule -->
-<h3>8.1 The Product Rule</h3>
+<h3>The Product Rule</h3>
 
 <div class="example">
     <h5>Example 1: Motivating the Product Rule</h5>
@@ -265,6 +265,8 @@
     \[\frac{d}{dx}[f(x)g(x)] = f(x)g'(x) + g(x)f'(x)\]
 </div>
 
+<h3>Examples</h3>
+
 <div class="example">
     <h5>Example 1 (revisited): Using the Product Rule</h5>
     <p>Suppose \(y = 3x^3(5x^2 + 7x)\). Find \(y'\) using the product rule.</p>
@@ -306,7 +308,7 @@
 </div>
 
 <!-- Section 2: Practice Problems -->
-<h3>8.2 Practice Problems</h3>
+<h3>Practice Problems</h3>
 
 <div class="example">
     <h5>Practice Problem 1: Finding Horizontal Tangent Lines</h5>
