--- a/MA_16010_Spring_2026/Accessible_Notes/lesson9_accessible_notes.html
+++ b/MA_16010_Spring_2026/Accessible_Notes/lesson9_accessible_notes.html
@@ -205,7 +205,7 @@
 <h3>Lesson 9: The Quotient Rule and Other Trigonometric Derivatives</h3>
 
 <!-- Section 1: The Quotient Rule -->
-<h3>9.1 The Quotient Rule</h3>
+<h3>The Quotient Rule</h3>
 
 <div class="theorem">
     <p><strong>The Quotient Rule:</strong> For differentiable functions \(f(x)\) and \(g(x)\) where \(g(x) \neq 0\),</p>
@@ -266,7 +266,7 @@
 </div>
 
 <!-- Section 2: Derivatives of Other Trigonometric Functions -->
-<h3>9.2 Derivatives of the Other Trigonometric Functions</h3>
+<h3>Derivatives of the Other Trigonometric Functions</h3>
 
 <div class="theorem">
     <p><strong>Derivatives of Tangent, Cotangent, Secant, and Cosecant:</strong></p>
