--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             I grew up in the Chicago Metropolitan Area of Illinois.
             In 2020, I graduated from the University of Illinois at Urbana-Champaign with a BS in Mathematics and a minor in Criminology, Law, and Society.
             My research interests are rooted in combinatorial commutative algebra and computational algebraic geometry. 
-            I am advised by <a href="https://www.math.purdue.edu/~walther/">Uli Walther</a> and co-advised by <a href="https://www.math.purdue.edu/~esampert/">Eric Samperton</a>.
+            I am advised by <a href="https://www.math.purdue.edu/~walther/">Uli Walther</a> and <a href="https://www.math.purdue.edu/~esampert/">Eric Samperton</a>.
             In my free time, I enjoy playing tennis, as well as running.
           </p>
           <h3>Contact Information</h3>
