Added lesson 12 handwritten notes.

--- a/MA_16010_Spring_2026/MA16010spring2026.html
+++ b/MA_16010_Spring_2026/MA16010spring2026.html
@@ -96,32 +96,33 @@
         <!-- <h3><a href="extra_credit.pdf">Extra Credit</a></h3> -->
         <h3>Handwritten Notes</h3>
         <p>
-        <a href="Handwritten_Notes/lesson1_handwritten_notes.pdf">Lesson 1</a> <br>
-        <a href="Handwritten_Notes/lesson2_handwritten_notes.pdf">Lesson 2</a> <br>
-        <a href="Handwritten_Notes/lesson3_handwritten_notes.pdf">Lesson 3</a> <br>
-        <a href="Handwritten_Notes/lesson4_handwritten_notes.pdf">Lesson 4</a> <br>
-        <a href="Handwritten_Notes/lesson5_handwritten_notes.pdf">Lesson 5</a> <br>
-        <a href="Handwritten_Notes/lesson6_handwritten_notes.pdf">Lesson 6</a> <br>
-        <a href="Handwritten_Notes/lesson7_handwritten_notes.pdf">Lesson 7</a> <br>
-        <a href="Handwritten_Notes/lesson8_handwritten_notes.pdf">Lesson 8</a> <br>
-        <a href="Handwritten_Notes/lesson9_handwritten_notes.pdf">Lesson 9</a> <br>
-        <a href="Handwritten_Notes/lesson10_handwritten_notes.pdf">Lesson 10</a> <br>
-        <a href="Handwritten_Notes/lesson11_handwritten_notes.pdf">Lesson 11</a>
+        <a href="Handwritten_Notes/lesson1_handwritten_notes.pdf" target="_blank">Lesson 1</a> <br>
+        <a href="Handwritten_Notes/lesson2_handwritten_notes.pdf" target="_blank">Lesson 2</a> <br>
+        <a href="Handwritten_Notes/lesson3_handwritten_notes.pdf" target="_blank">Lesson 3</a> <br>
+        <a href="Handwritten_Notes/lesson4_handwritten_notes.pdf" target="_blank">Lesson 4</a> <br>
+        <a href="Handwritten_Notes/lesson5_handwritten_notes.pdf" target="_blank">Lesson 5</a> <br>
+        <a href="Handwritten_Notes/lesson6_handwritten_notes.pdf" target="_blank">Lesson 6</a> <br>
+        <a href="Handwritten_Notes/lesson7_handwritten_notes.pdf" target="_blank">Lesson 7</a> <br>
+        <a href="Handwritten_Notes/lesson8_handwritten_notes.pdf" target="_blank">Lesson 8</a> <br>
+        <a href="Handwritten_Notes/lesson9_handwritten_notes.pdf" target="_blank">Lesson 9</a> <br>
+        <a href="Handwritten_Notes/lesson10_handwritten_notes.pdf" target="_blank">Lesson 10</a> <br>
+        <a href="Handwritten_Notes/lesson11_handwritten_notes.pdf" target="_blank">Lesson 11</a> <br>
+        <a href="Handwritten_Notes/lesson12_handwritten_notes.pdf" target="_blank">Lesson 12</a>
         </p>
         <h3>Accessible Notes</h3>
         <p>
         <!-- <i>Remark: Notes were created with the help of resources provided by the <a href="https://www.math.purdue.edu/~yipn/TPC/">Teaching Pit Crew</a>.</i> <br> -->
-        <a href="Accessible_Notes/lesson1_accessible_notes.html">Lesson 1</a> <br>
-        <a href="Accessible_Notes/lesson2_accessible_notes.html">Lesson 2</a> <br>
-        <a href="Accessible_Notes/lesson3_accessible_notes.html">Lesson 3</a> <br>
-        <a href="Accessible_Notes/lesson4_accessible_notes.html">Lesson 4</a> <br>
-        <a href="Accessible_Notes/lesson5_accessible_notes.html">Lesson 5</a> <br>
-        <a href="Accessible_Notes/lesson6_accessible_notes.html">Lesson 6</a> <br>
-        <a href="Accessible_Notes/lesson7_accessible_notes.html">Lesson 7</a> <br>
-        <a href="Accessible_Notes/lesson8_accessible_notes.html">Lesson 8</a> <br>
-        <a href="Accessible_Notes/lesson9_accessible_notes.html">Lesson 9</a> <br>
-        <a href="Accessible_Notes/lesson10_accessible_notes.html">Lesson 10</a> <br>
-        <a href="Accessible_Notes/lesson11_accessible_notes.html">Lesson 11</a>
+        <a href="Accessible_Notes/lesson1_accessible_notes.html" target="_blank">Lesson 1</a> <br>
+        <a href="Accessible_Notes/lesson2_accessible_notes.html" target="_blank">Lesson 2</a> <br>
+        <a href="Accessible_Notes/lesson3_accessible_notes.html" target="_blank">Lesson 3</a> <br>
+        <a href="Accessible_Notes/lesson4_accessible_notes.html" target="_blank">Lesson 4</a> <br>
+        <a href="Accessible_Notes/lesson5_accessible_notes.html" target="_blank">Lesson 5</a> <br>
+        <a href="Accessible_Notes/lesson6_accessible_notes.html" target="_blank">Lesson 6</a> <br>
+        <a href="Accessible_Notes/lesson7_accessible_notes.html" target="_blank">Lesson 7</a> <br>
+        <a href="Accessible_Notes/lesson8_accessible_notes.html" target="_blank">Lesson 8</a> <br>
+        <a href="Accessible_Notes/lesson9_accessible_notes.html" target="_blank">Lesson 9</a> <br>
+        <a href="Accessible_Notes/lesson10_accessible_notes.html" target="_blank">Lesson 10</a> <br>
+        <a href="Accessible_Notes/lesson11_accessible_notes.html" target="_blank">Lesson 11</a>
         <br> <br> <i>Remark: Accessible notes were created with the help of resources provided by the <a href="https://www.math.purdue.edu/~yipn/TPC/">Teaching Pit Crew</a>.</i>
         </p>
     </div>
