--- a/MA_16010_Spring_2026/MA16010spring2026.html
+++ b/MA_16010_Spring_2026/MA16010spring2026.html
@@ -122,7 +122,8 @@
         <a href="Accessible_Notes/lesson8_accessible_notes.html" target="_blank">Lesson 8</a> <br>
         <a href="Accessible_Notes/lesson9_accessible_notes.html" target="_blank">Lesson 9</a> <br>
         <a href="Accessible_Notes/lesson10_accessible_notes.html" target="_blank">Lesson 10</a> <br>
-        <a href="Accessible_Notes/lesson11_accessible_notes.html" target="_blank">Lesson 11</a>
+        <a href="Accessible_Notes/lesson11_accessible_notes.html" target="_blank">Lesson 11</a> <br>
+        <a href="Accessible_Notes/lesson12_accessible_notes.html" target="_blank">Lesson 12</a>
         <br> <br> <i>Remark: Accessible notes were created with the help of resources provided by the <a href="https://www.math.purdue.edu/~yipn/TPC/">Teaching Pit Crew</a>.</i>
         </p>
     </div>
