Added blank target to each link.

--- a/MA_16010_Spring_2026/MA16010spring2026.html
+++ b/MA_16010_Spring_2026/MA16010spring2026.html
@@ -124,7 +124,7 @@
         <a href="Accessible_Notes/lesson10_accessible_notes.html" target="_blank">Lesson 10</a> <br>
         <a href="Accessible_Notes/lesson11_accessible_notes.html" target="_blank">Lesson 11</a> <br>
         <a href="Accessible_Notes/lesson12_accessible_notes.html" target="_blank">Lesson 12</a>
-        <br> <br> <i>Remark: Accessible notes were created with the help of resources provided by the <a href="https://www.math.purdue.edu/~yipn/TPC/">Teaching Pit Crew</a>.</i>
+        <br> <br> <i>Remark: Accessible notes were created with the help of resources provided by the <a href="https://www.math.purdue.edu/~yipn/TPC/" target="_blank">Teaching Pit Crew</a>.</i>
         </p>
     </div>
 
