--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             I grew up in the Chicago Metropolitan Area of Illinois.
             In 2020, I graduated from the University of Illinois at Urbana-Champaign with a BS in Mathematics and a minor in Criminology, Law, and Society.
             My research interests are rooted in combinatorial commutative algebra and computational algebraic geometry. 
-            I am advised by <a href="https://www.math.purdue.edu/~walther/">Uli Walther</a> and <a href="https://www.math.purdue.edu/~esampert/">Eric Samperton</a>.
+            I am advised by <a href="https://www.math.purdue.edu/~walther/" target="_blank">Uli Walther</a> and <a href="https://www.math.purdue.edu/~esampert/" target="_blank">Eric Samperton</a>.
             In my free time, I enjoy playing tennis, as well as running.
           </p>
           <h3>Contact Information</h3>
@@ -167,7 +167,7 @@
             Address: Mathematical Sciences Building, 150 N. University Street, Office 1047, West Lafayette, IN
           </p>
           <h3>
-            <a href="https://drive.google.com/file/d/1pCiDXdORzIutda_As4-h6gJO7VdKJVtJ/view?usp=sharing">
+            <a href="https://drive.google.com/file/d/1pCiDXdORzIutda_As4-h6gJO7VdKJVtJ/view?usp=sharing" target="_blank">
               Curriculum Vitae
             </a>
           </h3>
@@ -196,19 +196,19 @@
           <!-- <h3>Computational Algebraic Geometry</h3> -->
           <h3>Mentorship</h3>
           <p>
-            During the spring of 2025, I was the graduate student mentor for an undergraduate research project through the <a href="https://www.math.purdue.edu/pxml/index.html">Purdue Experimental Mathematics Lab</a>.
-            Under the guidance of Eric Samperton and myself, undergraduates <a href="https://www.linkedin.com/in/shannon-cheng-527608204/">Shannon Cheng</a> and <a href="https://www.linkedin.com/in/saarah-nazar/">Saarah Nazar</a> developed an interactive <a href="https://trivial-sublink-git-main-shannonc8s-projects.vercel.app">applet</a> to illustrate a reduction from the Independent Set Problem to the Trivial Sublink Problem. <br>
+            During the spring of 2025, I was the graduate student mentor for an undergraduate research project through the <a href="https://www.math.purdue.edu/pxml/index.html" target="_blank">Purdue Experimental Mathematics Lab</a>.
+            Under the guidance of Eric Samperton and myself, undergraduates <a href="https://www.linkedin.com/in/shannon-cheng-527608204/" target="_blank">Shannon Cheng</a> and <a href="https://www.linkedin.com/in/saarah-nazar/" target="_blank">Saarah Nazar</a> developed an interactive <a href="https://trivial-sublink-git-main-shannonc8s-projects.vercel.app" target="_blank">applet</a> to illustrate a reduction from the Independent Set Problem to the Trivial Sublink Problem. <br>
             <!-- As of present, our group is interested in determining the computational complexity of a counting problem related to -->
           </p>
           <h3>Preprints</h3>
           <p>
-            (3) <a href="https://arxiv.org/abs/2601.02612">Antidiagonal Initial Complexes of Infinite Matrix Schubert Varieties are Cohen-Macaulay</a>.
-            With <a href="https://sites.google.com/view/nathanielgallup/home">Nathaniel Gallup</a> and Jason Meintjes.
+            (3) <a href="https://arxiv.org/abs/2601.02612" target="_blank">Antidiagonal Initial Complexes of Infinite Matrix Schubert Varieties are Cohen-Macaulay</a>.
+            With <a href="https://sites.google.com/view/nathanielgallup/home" target="_blank">Nathaniel Gallup</a> and Jason Meintjes.
             Submitted 2026. <br>
-            (2) <a href="https://arxiv.org/abs/2509.13120">An elementary proof that linking problems are hard</a>. 
+            (2) <a href="https://arxiv.org/abs/2509.13120" target="_blank">An elementary proof that linking problems are hard</a>. 
             With Shannon Cheng, Saarah Nazar, and Eric Samperton.
             Submitted 2025. <br>
-            (1) <a href="https://arxiv.org/abs/1910.12928">Permutation polynomials: iteration of shift and inversion maps over finite fields</a>.
+            (1) <a href="https://arxiv.org/abs/1910.12928" target="_blank">Permutation polynomials: iteration of shift and inversion maps over finite fields</a>.
             With Juliano Levier-Gomes, Wayne Peng, Alex Shearer, and Adam Towsley.
             2021.
           </p>
@@ -227,7 +227,7 @@
           Current students can find course notes using the links below.
           <h3>Instructor of Record</h3>
           <p>
-            Applied Calculus I (MA 16010), Fall 2024 and <a href="MA_16010_Spring_2026/MA16010spring2026.html">Spring 2026</a>
+            Applied Calculus I (MA 16010), Fall 2024 and <a href="MA_16010_Spring_2026/MA16010spring2026.html" target="_blank">Spring 2026</a>
           </p>
           <h3>Recitation Instructor</h3>
           <p>
@@ -264,7 +264,7 @@
           Below are the initiatives I am currently a part of. For prior involvement, please consult my CV.
           <h3>Bridge to Research</h3>
           <p>
-            <i>Co-organizer (with <a href="https://www.math.purdue.edu/people/grad/index.html?student=jmojsilo">Jelena Mojsilovic</a> and <a href="https://benjaminmudrak.github.io">Benjamin Mudrak</a>)</i> <br>
+            <i>Co-organizer (with <a href="https://www.math.purdue.edu/people/grad/index.html?student=jmojsilo" target="_blank">Jelena Mojsilovic</a> and <a href="https://benjaminmudrak.github.io" target="_blank">Benjamin Mudrak</a>)</i> <br>
             Graduate student seminar which offers Purdue Math Department faculty the space to provide an introduction into their research area.
             Especially useful for those in search of a research advisor or direction.
           </p>
@@ -273,7 +273,7 @@
             <i>Vice President</i> <br>
             Focused on supporting women in the Purdue Math Department via social and professional development events.
             Notable efforts include the Math Mentor Program for first-year graduate students and the Purdue Annual AWM Symposium, a "mini conference" for gender minorities to showcase their research.
-            For further information, please visit our <a href="https://sites.google.com/site/awmpurduechapter">webpage</a>.
+            For further information, please visit our <a href="https://sites.google.com/site/awmpurduechapter" target="_blank">webpage</a>.
           </p>
         </div>
 
