Edit small detail.

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
           Below are the initiatives I am currently a part of. For prior involvement, please consult my CV.
           <h3>Bridge to Research</h3>
           <p>
-            <i>Co-organizer (with <a href="https://www.math.purdue.edu/people/grad/index.html?student=jmojsilo" target="_blank">Jelena Mojsilovic</a> and <a href="https://benjaminmudrak.github.io" target="_blank">Benjamin Mudrak</a>)</i> <br>
+            <i>Organizer (with <a href="https://www.math.purdue.edu/people/grad/index.html?student=jmojsilo" target="_blank">Jelena Mojsilovic</a> and <a href="https://benjaminmudrak.github.io" target="_blank">Benjamin Mudrak</a>)</i> <br>
             Graduate student seminar which offers Purdue Math Department faculty the space to provide an introduction into their research area.
             Especially useful for those in search of a research advisor or direction.
           </p>
