Added lesson 13 handwritten notes.

--- a/MA_16010_Spring_2026/MA16010spring2026.html
+++ b/MA_16010_Spring_2026/MA16010spring2026.html
@@ -107,7 +107,8 @@
         <a href="Handwritten_Notes/lesson9_handwritten_notes.pdf" target="_blank">Lesson 9</a> <br>
         <a href="Handwritten_Notes/lesson10_handwritten_notes.pdf" target="_blank">Lesson 10</a> <br>
         <a href="Handwritten_Notes/lesson11_handwritten_notes.pdf" target="_blank">Lesson 11</a> <br>
-        <a href="Handwritten_Notes/lesson12_handwritten_notes.pdf" target="_blank">Lesson 12</a>
+        <a href="Handwritten_Notes/lesson12_handwritten_notes.pdf" target="_blank">Lesson 12</a> <br>
+        <a href="Handwritten_Notes/lesson13_handwritten_notes.pdf" target="_blank">Lesson 13</a>
         </p>
         <h3>Accessible Notes</h3>
         <p>
