--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
           Current students can find course notes using the links below.
           <h3>Instructor of Record</h3>
           <p>
+            Linear Algebra (MA 26500), Spring 2026 <br>
             Applied Calculus I (MA 16010), Fall 2024 and <a href="MA_16010_Spring_2026/MA16010spring2026.html" target="_blank">Spring 2026</a>
           </p>
           <h3>Recitation Instructor</h3>
