--- a/MA_16010_Spring_2026/MA16010spring2026.html
+++ b/MA_16010_Spring_2026/MA16010spring2026.html
@@ -110,7 +110,8 @@
         <a href="Handwritten_Notes/lesson12_handwritten_notes.pdf" target="_blank">Lesson 12</a> <br>
         <a href="Handwritten_Notes/lesson13_handwritten_notes.pdf" target="_blank">Lesson 13</a> <br>
         <a href="Handwritten_Notes/lesson14_handwritten_notes.pdf" target="_blank">Lesson 14</a> <br>
-        <a href="Handwritten_Notes/lesson15_handwritten_notes.pdf" target="_blank">Lesson 15</a>
+        <a href="Handwritten_Notes/lesson15_handwritten_notes.pdf" target="_blank">Lesson 15</a> <br>
+        <a href="Handwritten_Notes/lesson16_handwritten_notes.pdf" target="_blank">Lesson 16</a>
         </p>
         <h3>Accessible Notes</h3>
         <p>
